# xcomprs

./: .gitignore  Cargo.toml  OUT  README.md  build.rs  xephyr.sh  xlib_libs.h
shaders/: default_fs.glsl  default_vs.glsl  screen_fs.glsl  screen_vs.glsl
src/: errors.rs  ewm.rs  gl.rs  gl_renderer.rs  glx.rs  glx_util.rs  main.rs  win.rs  xlib.rs
