[package]
name = "xcomprs"
version = "0.1.0"
authors = ["Kh4n <asadullahmkhan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = "0.8.1"

[build-dependencies]
bindgen = "0.59.1"
gl_generator = "0.5.4"

[features]
default = ["x11rb/composite", "x11rb/allow-unsafe-code", "x11rb/shape", "x11rb/xfixes"]